--- a/package.json
+++ b/package.json
@@ -35,9 +35,9 @@
   "homepage": "https://github.com/angelilton/spotifyAPI#readme",
   "devDependencies": {
     "babel-eslint": "^10.1.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-register": "^6.26.0",
-    "chai": "^4.2.0",
+    "babel-preset-env": "1.7.0",
+    "babel-register": "6.26.0",
+    "chai": "3.5.0",
     "eslint": "^7.1.0",
     "eslint-config-prettier": "6.11.0",
     "eslint-config-prettier-standard": "3.0.1",
@@ -49,12 +49,13 @@
     "eslint-plugin-react": "^7.20.0",
     "eslint-plugin-standard": "^4.0.1",
     "husky": "^4.2.5",
-    "mocha": "^8.0.1",
+    "mocha": "3.2.0",
     "node-fetch": "^2.6.0",
-    "nyc": "^15.1.0",
+    "nyc": "10.2.0",
     "prettier": "2.0.5",
     "prettier-config-standard": "1.0.1",
-    "sinon": "^9.0.2",
-    "sinon-chai": "^3.5.0"
+    "sinon": "2.1.0",
+    "sinon-chai": "2.9.0",
+    "sinon-stub-promise": "4.0.0"
   }
 }
