--- a/package.json
+++ b/package.json
@@ -2,12 +2,22 @@
   "name": "spotifyAPI",
   "version": "1.0.0",
   "description": "A wapper to work with Spotify web API.",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
+    "clear": "rimraf lib",
+    "build": "yarn clear && ./node_modules/.bin/babel --out-dir lib src",
+    "build:watch": "yarn build -- --watch",
+    "build:umd": "./node_modules/.bin/webpack --output-filename spotifyAPI.umd.js",
+    "build:umd:min": "./node_modules/.bin/webpack --output-filename spotifyAPI.umd.min.js -p",
+    "build:all": "yarn build && yarn build:umd && npm run build:umd:min",
     "test": "./node_modules/.bin/mocha tests/**/*.spec.js --require babel-register",
-    "test:tdd": "./node_modules/.bin/mocha tests/**/*.spec.js --require babel-register --watch",
+    "test:tdd": "./node_modules/.bin/mocha tests/**/*.spec.js --require babel-register",
     "test:cover": "nyc yarn test"
   },
+  "files": [
+    "dist",
+    "lib"
+  ],
   "nyc": {
     "reporter": [
       "text",
@@ -34,7 +44,9 @@
   },
   "homepage": "https://github.com/angelilton/spotifyAPI#readme",
   "devDependencies": {
+    "babel-cli": "6.24.1",
     "babel-eslint": "^10.1.0",
+    "babel-loader": "7.0.0",
     "babel-preset-env": "1.7.0",
     "babel-register": "6.26.0",
     "chai": "3.5.0",
@@ -54,8 +66,10 @@
     "nyc": "10.2.0",
     "prettier": "2.0.5",
     "prettier-config-standard": "1.0.1",
+    "rimraf": "^3.0.2",
     "sinon": "2.1.0",
     "sinon-chai": "2.9.0",
-    "sinon-stub-promise": "4.0.0"
+    "sinon-stub-promise": "4.0.0",
+    "webpack": "2.4.1"
   }
 }
